--- a/app/project1/webapp/view/HeadHrListDetails.view.xml
+++ b/app/project1/webapp/view/HeadHrListDetails.view.xml
@@ -1,11 +1,11 @@
 <mvc:View
     height="100%"
-    controllerName="project1.controller.EmployeeDetails"
+    controllerName="project1.controller.HeadHrListDetails"
     xmlns:f="sap.ui.layout.form"
     xmlns:core="sap.ui.core"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns:m="sap.m"
-    xmlns="sap.suite.ui.commons.networkgraph"
+	xmlns="sap.suite.ui.commons.networkgraph"
 >
     <m:Page
         id="idPage1"
@@ -34,13 +34,6 @@
         </m:customHeader>
         <!-- this CSS class add a standard spacing to all the page content -->
         <m:content>
-            <!-- <m:Button
-                    icon="sap-icon://edit"
-                    type="Transparent"
-                    press="onEdit"
-                    ariaLabelledBy="editButtonLabel"
-                    class="sapUiSmallMarginBegin"
-                /> -->
             <m:ObjectHeader
                 id="idPage"
                 responsive="true"
@@ -51,14 +44,29 @@
                 titlePress="handleTitlePress"
                 backgroundDesign="Translucent"
                 class="sapUiResponsivePadding--header"
+                
             >
+            	<!-- <m:ObjectAttribute
+			title="IT Department Status"
+			text="{/employee/itStatus}"/> -->
+
                 <m:statuses>
+
+                       <m:ObjectStatus
+                        title="Onboarding Status"
+                        text="{employee>status}"
+                        state="{= ${employee>status} === 'Approve' ? 'Success' : ${employee>status} === 'Pending' ? 'Warning' : 'Error' }"
+                    />
+                    
+                </m:statuses>
+                
+                   <!-- <m:statuses>
                     <m:ObjectStatus
                         title="Onboarding Status"
                         text="{employee>status}"
                         state="{= ${employee>status} === 'Approve' ? 'Success' : ${employee>status} === 'Pending' ? 'Warning' : 'Error' }"
                     />
-                </m:statuses>
+                </m:statuses> -->
                 <m:statuses>
                     <m:ObjectStatus
                         title="IT Status"
@@ -87,39 +95,8 @@
                         state="{= ${employee>hrStatus} === 'Approve' ? 'Success' : ${employee>hrStatus} === 'Pending' ? 'Warning' : 'Error' }"
                     />
                 </m:statuses>
-
                 <m:headerContainer>
-                    <!-- <IconTabBar
-				id="itb1"
-				selectedKey="key3"
-				upperCase="true"
-				class="sapUiResponsiveContentPadding">
-				<items>
-					<IconTabFilter
-						key="info"
-						icon="sap-icon://hint">
-						<Text text="Info content goes here ..." />
-						
-					</IconTabFilter>
-					<IconTabFilter
-						key="attachments"
-						icon="sap-icon://attachment"
-						count="3">
-						<Text text="Attachments go here ..." />
-					</IconTabFilter>
-					<IconTabFilter
-						key="notes"
-						icon="sap-icon://notes"
-						count="12">
-						<Text text="Notes go here ..." />
-					</IconTabFilter>
-					<IconTabFilter
-						key="people"
-						icon="sap-icon://group">
-						<Text text="People content goes here ..." />
-					</IconTabFilter>
-				</items>
-			</IconTabBar> -->
+                
                 </m:headerContainer>
             </m:ObjectHeader>
             <m:IconTabBar
@@ -131,24 +108,19 @@
                         key="empStatus"
                         text="Employee Section"
                     >
-                        <m:FlexBox
-                            justifyContent="End"
-                            width="100%"
-                        >
-                            <!-- Content on the left side (if any) -->
-                            <m:Button
-                                icon="sap-icon://edit"
-                                type="Transparent"
-                                press="onEdit"
-                                ariaLabelledBy="editButtonLabel"
-                                class="sapUiSmallMarginBegin"
-                            />
-                        </m:FlexBox>
+                          <m:FlexBox justifyContent="End" width="100%" >
+        <!-- Content on the left side (if any) -->
+        <m:Button 
+         icon="sap-icon://edit"
+                    type="Transparent"
+                    press="onEdit"
+                    ariaLabelledBy="editButtonLabel"
+                    class="sapUiSmallMarginBegin" />
+    </m:FlexBox>
                         <f:SimpleForm layout="ResponsiveGridLayout">
                             <f:title>
                                 <core:Title text="Employee Details" />
                             </f:title>
-
                             <m:Label text="Employee name" />
                             <m:Text text="{employee>name}" />
                             <m:Label text="Mobile number" />
@@ -158,9 +130,7 @@
                             <m:Label text="Address" />
                             <m:Text text="{employee>address},{employee>city}" />
                             <m:Label text="State/Pincode" />
-                            <m:Text
-                                text="{employee>state},{employee>pincode}"
-                            />
+                            <m:Text text="{employee>state},{employee>pincode}" />
                             <m:Label text="Position" />
                             <m:Text text="{employee>position}" />
                             <m:Label text="Department" />
@@ -177,55 +147,56 @@
                         key="netwaorkGraph"
                         text="Network Graph Section"
                     >
-  <!-- ///////////////////////Network Graph Section////////////////////////////// -->
+                        <!-- ///////////////////////Network Graph Section////////////////////////////// -->
 
-                        <Graph
-                            enableWheelZoom="false"
-                            id="graph"
-                            orientation="TopBottom"
-                            height="100%"
-                            width="100%"
-                            nodes="{graph>/nodes}"
-                            lines="{graph>/lines}"
-                        >
-                            <nodes>
-                                <Node
-                                    key="{graph>key}"
-                                    title="{graph>title}"
-                                    icon="{graph>icon}"
-                                    attributes="{path:'graph>/nodes', templateShareable:true}"
-                                    actionButtons="{path:'graph>actionButtons', templateShareable:true}"
-                                    showActionLinksButton="{graph>actionlinksbutton}"
-                                    showDetailButton="{graph>detailbutton}"
-                                    showExpandButton="{graph>expandbutton}"
-                                    status="{graph>status}"
-                                    press="nodePress"
-                                >
-                                    <attributes>
-                                        <ElementAttribute
-                                            label="{graph>/label}"
-                                            value="{graph>/value}"
-                                        />
-                                    </attributes>
-                                    <actionButtons>
-                                        <ActionButton
-                                            icon="{graph>icon}"
-                                            title="Custom button"
-                                            press="buttonPress"
-                                        />
-                                    </actionButtons>
-                                </Node>
-                            </nodes>
-                            <lines>
-                                <Line
-                                    from="{graph>from}"
-                                    to="{graph>to}"
-                                    press="linePress"
-                                />
-                            </lines>
-                        </Graph>
+    <Graph
+		enableWheelZoom="false"
+        id="graph"
+        orientation="TopBottom"
+        height="100%"
+        width="100%"
+        nodes="{graph>/nodes}"
+        lines="{graph>/lines}">
+        <nodes>
+            <Node
+                    key="{graph>key}"
+                    title="{graph>title}"
+                    icon="{graph>icon}"
+                    attributes="{path:'graph>/nodes', templateShareable:true}"
+                    actionButtons="{path:'graph>actionButtons', templateShareable:true}"
+                    showActionLinksButton="{graph>actionlinksbutton}"
+                    showDetailButton="{graph>detailbutton}"
+                    showExpandButton="{graph>expandbutton}"
+                    status="{graph>status}"
+                    press="nodePress">
+                <attributes>
+                    <ElementAttribute
+                        label="{graph>/label}"
+                        value="{graph>/value}"/>
+                </attributes>
+                <actionButtons>
+                    <ActionButton
+                        icon="{graph>icon}"
+                        title="Custom button"
+                        press="buttonPress" />
+                </actionButtons>
+            </Node>
+        </nodes>
+        <lines>
+            <Line
+                    from="{graph>from}"
+                    to="{graph>to}"
+                    press="linePress">
+            </Line>
+        </lines>
+    </Graph>
 
-     <!-- ///////////////////////Network Graph Section////////////////////////////// -->
+
+
+
+
+
+<!-- ///////////////////////Network Graph Section////////////////////////////// -->
                     </m:IconTabFilter>
                     <m:IconTabFilter
                         key="comments"
@@ -255,6 +226,25 @@
                 </m:items>
             </m:IconTabBar>
 
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
             <!-- <f:SimpleForm
 				layout="ResponsiveGridLayout"
 				class="sapUiForceWidthAuto sapUiResponsiveMargin" >
