--- a/app/project1/webapp/view/ITListDetails.view.xml
+++ b/app/project1/webapp/view/ITListDetails.view.xml
@@ -78,7 +78,7 @@
                 <m:items>
                     <m:IconTabFilter
                         key="empStatus"
-                        text="Employee Section"
+                        text="General"
                     >
                           <m:FlexBox justifyContent="End" width="100%" >
         <!-- Content on the left side (if any) -->
@@ -117,7 +117,7 @@
                     </m:IconTabFilter>
                     <m:IconTabFilter
                         key="netwaorkGraph"
-                        text="Network Graph Section"
+                        text="WorkFlow"
                     >
                           <!-- ///////////////////////Network Graph Section////////////////////////////// -->
 
@@ -173,7 +173,7 @@
                     </m:IconTabFilter>
                     <m:IconTabFilter
                         key="comments"
-                        text="Comments Section"
+                        text="Comments"
                     >
                         <m:FeedInput
                             post="onPost"
