--- a/app/project1/webapp/view/JuniorHrList.view.xml
+++ b/app/project1/webapp/view/JuniorHrList.view.xml
@@ -17,7 +17,10 @@
         <ObjectListItem title="{employee>empId}" type="Active" press="onPressEmployee">
             
             <attributes>
+            
+                <ObjectAttribute title="Employee ID" text="{employee>mmId}" />
                 <ObjectAttribute title="Employee Name" text="{employee>name}" />
+                
                 <!-- IT Status -->
                 <ObjectAttribute title="IT Status" text="{employee>itStatus}" />
                 <!-- Finance Status -->
