--- a/app/project1/webapp/view/TeamLeadListDetails.view.xml
+++ b/app/project1/webapp/view/TeamLeadListDetails.view.xml
@@ -78,7 +78,7 @@
                 <m:items>
                     <m:IconTabFilter
                         key="empStatus"
-                        text="Employee Section"
+                        text="General"
                     >
                           <m:FlexBox justifyContent="End" width="100%" >
         <!-- Content on the left side (if any) -->
@@ -118,7 +118,7 @@
                     </m:IconTabFilter>
                     <m:IconTabFilter
                         key="netwaorkGraph"
-                        text="Network Graph Section"
+                        text="Workflow"
                     >
                          <!-- ///////////////////////Network Graph Section////////////////////////////// -->
 
@@ -174,7 +174,7 @@
                     </m:IconTabFilter>
                     <m:IconTabFilter
                         key="comments"
-                        text="Comments Section"
+                        text="Comments"
                     >
                         <m:FeedInput
                             post="onPost"
