--- a/app/employeeregister/webapp/view/View1.view.xml
+++ b/app/employeeregister/webapp/view/View1.view.xml
@@ -1,7 +1,24 @@
-<mvc:View controllerName="employeeregister.controller.View1"
+<mvc:View xmlns:form="sap.ui.layout.form" controllerName="employeeregister.controller.View1"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
-        <content />
+     <Page id="page" title="{i18n>title}">
+        <content>
+           <VBox id="_IDGenVBox1" justifyContent="Center" alignItems="Center" width="100%" class="sapUiMediumMargin">
+                <FlexBox id="_IDGenFlexBox1" justifyContent="SpaceBetween" alignItems="Center" width="30rem">
+                    <Label id="_IDGenLabel1" text="Employee ID" />
+                    <Input id="empIdInput" type="Text" width="100%" valueStateText="Please enter Employee ID" />
+
+                </FlexBox>
+                <FlexBox id="_IDGenFlexBox2" justifyContent="SpaceBetween" alignItems="Center" width="30rem">
+                    <Label id="_IDGenLabel2" text="Password" />
+                    <Input id="passwordInput" type="Password" width="100%" valueStateText="Please enter Password" />
+                </FlexBox>
+                <HBox class="sapUiMediumMargin">
+                <Button id="_IDGenButton1" text="Login" press=".onLoginPress" width="10rem"/>
+                <Text text="Deos'nt Have an Account" class="sapUiTinyMargin"></Text>
+                <Link text="SignUp" press=".onSignUp" class="sapUiTinyMargin"></Link>
+                </HBox>
+            </VBox>
+        </content>
     </Page>
 </mvc:View>
