--- a/app/project1/webapp/view/EmployeeDetails.view.xml
+++ b/app/project1/webapp/view/EmployeeDetails.view.xml
@@ -189,7 +189,6 @@
                                     title="{employee>name}"
                                     status="{employee>empFlowStatus}"
                                     icon="sap-icon://add-employee"
-                                    class="customNode"
                                     
                                 />
                                 <Node
@@ -395,31 +394,31 @@
                         </Graph> -->
 
                         <!-- ///////////////////////Network Graph Section////////////////////////////// -->
+
+
                     </m:IconTabFilter>
                     <m:IconTabFilter
                         key="comments"
                         text="Comments"
                     >
-                        <m:FeedInput
-                            post="onPost"
-                            icon="sap-icon://customer"
-                            class="sapUiSmallMarginTopBottom"
-                        />
-                        <m:List
-                            showSeparators="Inner"
-                            items="{feedModel>/EntryCollection}"
-                        >
-                            <m:FeedListItem
-                                sender="{Author}"
-                                icon="{AuthorPicUrl}"
-                                senderPress="onSenderPress"
-                                iconPress="onIconPress"
-                                info="{Type}"
-                                timestamp="{Date}"
-                                text="{Text}"
-                                convertLinksToAnchorTags="All"
-                            />
-                        </m:List>
+	<m:FeedInput
+		post="onPost"
+		icon="test-resources/sap/m/images/dronning_victoria.jpg"
+		class="sapUiSmallMarginTopBottom" />
+	<m:List
+		showSeparators="Inner"
+		items="{feedModel>/EntryCollection}" >
+		<m:FeedListItem
+			sender="{feedModel>Author}"
+			icon="{feedModel>AuthorPicUrl}"
+			senderPress="onSenderPress"
+			iconPress="onIconPress"
+			
+			info="{feedModel>Type}"
+			timestamp="{feedModel>Date}"
+			text="{feedModel>Text}"
+			convertLinksToAnchorTags="All"/>
+	</m:List>
                     </m:IconTabFilter>
                 </m:items>
             </m:IconTabBar>
